--- a/data.html
+++ b/data.html
@@ -30,8 +30,8 @@
             <div class="row" style="padding-top: 20px;">
                 <div class="col">
                     <h5>IIT Roorkee students' academic performance dataset</h5>
-                    <p>The dataset was collected at IIT Roorkee, India, for over 1000 students in 15 courses between 2006 to 2017. It has been anonymized to protect the identities of individual students. Students' academic performance is scored based on
-                        a set of parameters assessed across the comprehensive course of evaluation. [<a href="https://drive.google.com/file/d/11lK4iMYgjZ2eUBdR2xLCj8DklrI7EqOv/view?usp=sharing" target="_blank">access-form</a>]</p>
+                    <p>The dataset was collected at IIT Roorkee, India, for over 1000 students in 15 courses between 2006 to 2017. It has been anonymized to protect the student identities. Students' academic performance is scored based on a set of parameters
+                        assessed across the comprehensive course of evaluation. [<a href="https://drive.google.com/file/d/11lK4iMYgjZ2eUBdR2xLCj8DklrI7EqOv/view?usp=sharing" target="_blank">access-form</a>]</p>
                 </div>
             </div>
         </div>
