--- a/pub.html
+++ b/pub.html
@@ -32,41 +32,42 @@
                     <p class="text-muted"><em>* denotes equal contribution</em></p>
                     <h5>2020</h5>
                     <ul>
-                        <li>Buckchash, H., &amp; Raman, B. (2020). Towards Zero Shot Learning of Geometry of Motion Streams and Its Application to Anomaly Recognition. [<a href="https://doi.org/10.36227/techrxiv.12578306.v1" target="_blank">preprint</a>]</li>
-                        <li>Buckchash, H., &amp; Raman, B. (2020). Human Motion Generation by Stochastic Conditioning of Deep Recurrent Networks on Pose Manifolds. In&nbsp;<em>27th IEEE International Conference on&nbsp;Image Processing (ICIP). </em>[Accepted]</li>
-                        <li>Kundu*, J. N., Buckchash*, H., Mandikal, P., Venkatesh, R. M., Jamkhandi, A., &amp; Babu, R. V. (2020). Cross-conditioned Recurrent Networks for Long-term Synthesis of Inter-person Human Motion Interactions. In&nbsp;<em>The IEEE Winter Conference on Applications of Computer Vision (WACV),&nbsp;</em>&nbsp;pp.
-                            2724-2733. [<a href="https://openaccess.thecvf.com/content_WACV_2020/papers/Kundu_Cross-Conditioned_Recurrent_Networks_for_Long-Term_Synthesis_of_Inter-Person_Human_Motion_WACV_2020_paper.pdf" target="_blank">published</a>]</li>
-                        <li>Buckchash, H., &amp; Raman, B. (2020). Variational Conditioning of Deep Recurrent Networks for Modeling Complex Motion Dynamics. In&nbsp;<em>IEEE Access,</em>&nbsp;8(1), pp. 67822-67834. [<a href="https://ieeexplore.ieee.org/document/9055015"
+                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. Towards Zero Shot Learning of Geometry of Motion Streams and Its Application to Anomaly Recognition. [<a href="https://doi.org/10.36227/techrxiv.12578306.v1"
+                                target="_blank">preprint</a>]</li>
+                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. Human Motion Generation by Stochastic Conditioning of Deep Recurrent Networks on Pose Manifolds. In&nbsp;<em>27th IEEE International Conference on&nbsp;Image Processing (ICIP). </em>[Accepted]</li>
+                        <li>Kundu*, J. N., <span style="text-decoration: underline;">Buckchash*, H.</span>, Mandikal, P., Venkatesh, R. M., Jamkhandi, A., &amp; Babu, R. V., 2020. Cross-conditioned Recurrent Networks for Long-term Synthesis of Inter-person
+                            Human Motion Interactions. In&nbsp;<em>The IEEE Winter Conference on Applications of Computer Vision (WACV),&nbsp;</em>&nbsp;pp. 2724-2733. [<a href="https://openaccess.thecvf.com/content_WACV_2020/papers/Kundu_Cross-Conditioned_Recurrent_Networks_for_Long-Term_Synthesis_of_Inter-Person_Human_Motion_WACV_2020_paper.pdf"
                                 target="_blank">published</a>]</li>
-                        <li>Arora*, R., Bansal*, V., Buckchash*, H.,&nbsp;<em>et al.</em>&nbsp;(2020). AI-Based Diagnosis of COVID-19 Patients Using X-Ray Scans With Stochastic Ensemble of CNNs. [<a href="https://doi.org/10.36227/techrxiv.12464402.v1" target="_blank">preprint</a>]</li>
-                        <li>Kumar, R., Arora, R., Bansal, V., Sahayasheela, V. J., Buckchash, H.,&nbsp;<em>et al.</em>&nbsp;(2020). Accurate Prediction of COVID-19 Using Chest X-Ray Images Through Deep Feature Learning Model With SMOTE and Machine Learning
-                            Classifiers. [<a href="https://doi.org/10.1101/2020.04.13.20063461" target="_blank">preprint</a>]</li>
+                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. Variational Conditioning of Deep Recurrent Networks for Modeling Complex Motion Dynamics. In&nbsp;<em>IEEE Access,</em>&nbsp;8(1), pp. 67822-67834.
+                            [<a href="https://ieeexplore.ieee.org/document/9055015" target="_blank">published</a>]</li>
+                        <li>Arora*, R., Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>,&nbsp;<em>et al.,</em>&nbsp;2020. AI-Based Diagnosis of COVID-19 Patients Using X-Ray Scans With Stochastic Ensemble of CNNs. [<a href="https://doi.org/10.36227/techrxiv.12464402.v1"
+                                target="_blank">preprint</a>]</li>
+                        <li>Kumar, R., Arora, R., Bansal, V., Sahayasheela, V. J., <span style="text-decoration: underline;">Buckchash, H.</span>,&nbsp;<em>et al.,</em>&nbsp;2020. Accurate Prediction of COVID-19 Using Chest X-Ray Images Through Deep Feature
+                            Learning Model With SMOTE and Machine Learning Classifiers. [<a href="https://doi.org/10.1101/2020.04.13.20063461" target="_blank">preprint</a>]</li>
                     </ul>
                     <h5>2019</h5>
                     <ul>
-                        <li>Buckchash, H., &amp; Raman, B. (December, 2019). Sustained Self-Supervised Pretraining for Temporal Order Verification. In&nbsp;<em>8th International Conference on&nbsp;Pattern Recognition &amp; Machine Intelligence (PReMI),</em>&nbsp;pp.
+                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2019. Sustained Self-Supervised Pretraining for Temporal Order Verification. In&nbsp;<em>8th International Conference on&nbsp;Pattern Recognition &amp; Machine Intelligence (PReMI),</em>&nbsp;pp.
                             140-149. Springer, Cham.&nbsp;[<a href="https://link.springer.com/chapter/10.1007/978-3-030-34869-4_16" target="_blank">published</a>]</li>
-                        <li>Tanwar, V. K., Buckchash, H., Raman, B., &amp; Bhargava, R. (2018). Dense Motion Analysis of German Finger Spellings. In&nbsp;<em>Multimedia Tools and Applications,</em>&nbsp;78(8), pp. 9511-9536. [<a href="https://link.springer.com/article/10.1007/s11042-018-6533-0"
-                                target="_blank">published</a>]</li>
+                        <li>Tanwar, V. K., <span style="text-decoration: underline;">Buckchash, H.</span>, Raman, B., &amp; Bhargava, R., 2018. Dense Motion Analysis of German Finger Spellings. In&nbsp;<em>Multimedia Tools and Applications,</em>&nbsp;78(8),
+                            pp. 9511-9536. [<a href="https://link.springer.com/article/10.1007/s11042-018-6533-0" target="_blank">published</a>]</li>
                     </ul>
                     <h5>2018</h5>
                     <ul>
-                        <li>Pundir, A. S., Buckchash, H., Rajput, A. S., Tanwar, V. K., &amp; Raman, B. (2018). Fire Detection Using Dense Trajectories. In&nbsp;<em>Proceedings of&nbsp;2nd International Conference on&nbsp;Computer Vision &amp; Image Processing (CVIP), </em>pp.
+                        <li>Pundir, A. S., <span style="text-decoration: underline;">Buckchash, H.</span>, Rajput, A. S., Tanwar, V. K., &amp; Raman, B., 2018. Fire Detection Using Dense Trajectories. In&nbsp;<em>Proceedings of&nbsp;2nd International Conference on&nbsp;Computer Vision &amp; Image Processing (CVIP), </em>pp.
                             211-221. Springer, Singapore.&nbsp;[<a href="https://link.springer.com/chapter/10.1007/978-981-10-7898-9_17" target="_blank">published</a>]</li>
                     </ul>
                     <h5>2017</h5>
                     <ul>
-                        <li>Kushwaha, P., Buckchash, H., &amp; Raman, B. (November, 2017). Anomaly Based Intrusion Detection Using Filter Based Feature Selection on KDD-CUP 99. In&nbsp;<em>TENCON 2017 IEEE&nbsp;Region 10 Conference, </em>pp. 839-844. IEEE.&nbsp;[
-                            <a
-                                href="https://ieeexplore.ieee.org/document/8227975" target="_blank">published</a>]</li>
-                        <li>Buckchash, H., &amp; Raman, B. (July, 2017). A Robust Object Detector: Application to Detection of Visual Knives. In&nbsp;<em>2017 IEEE International Conference on&nbsp;Multimedia &amp; Expo Workshops (ICMEw), </em>pp. 633-638.
-                            IEEE.&nbsp;[<a href="https://ieeexplore.ieee.org/document/8026214" target="_blank">published</a>]</li>
+                        <li>Kushwaha, P., <span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2017. Anomaly Based Intrusion Detection Using Filter Based Feature Selection on KDD-CUP 99. In&nbsp;<em>2017 IEEE&nbsp;Region 10 Conference (TENCON), </em>pp.
+                            839-844. IEEE.&nbsp;[<a href="https://ieeexplore.ieee.org/document/8227975" target="_blank">published</a>]</li>
+                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2017. A Robust Object Detector: Application to Detection of Visual Knives. In&nbsp;<em>2017 IEEE International Conference on&nbsp;Multimedia &amp; Expo Workshops (ICMEw), </em>pp.
+                            633-638. IEEE.&nbsp;[<a href="https://ieeexplore.ieee.org/document/8026214" target="_blank">published</a>]</li>
                     </ul>
                     <h5>2015</h5>
                     <ul>
-                        <li>Buckchash, H., &amp; Verma, G. K. (2015). Texture vs. Multiresolution Analysis of Facial Expressions: Application to Emotion Recognition. In&nbsp;<em>International Journal of Applied Pattern Recognition,</em>&nbsp;2(1), pp. 46-75.&nbsp;[
-                            <a
-                                href="https://www.inderscienceonline.com/doi/abs/10.1504/IJAPR.2015.068931" target="_blank">published</a>]</li>
+                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Verma, G. K., 2015. Texture vs. Multiresolution Analysis of Facial Expressions: Application to Emotion Recognition. In&nbsp;<em>International Journal of Applied Pattern Recognition,</em>&nbsp;2(1),
+                            pp. 46-75.&nbsp;[<a href="https://www.inderscienceonline.com/doi/abs/10.1504/IJAPR.2015.068931" target="_blank">published</a>]</li>
                     </ul>
                     <p></p>
                 </div>
