--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="row" style="padding-top: 20px;">
                 <div class="col">
                     <h5>Research Interests</h5>
-                    <p>My present research revolves around video analysis, focusing on understanding — motion, action recognition, generative models, and manifold learning. I am trying to develop algorithms that can understand video content in the absence
+                    <p>My present research revolves around video analysis, with a focus on understanding — motion, action recognition, generative models, and manifold learning. I am trying to develop algorithms that can understand video content in the absence
                         of labels. The primary focus is on video representations. My broad areas of interest are:</p>
                     <ul>
                         <li>Computer Vision</li>
