--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                 <div class="col-xl-3"><img class="rounded-circle img-fluid" src="assets/img/him_nbg.png"></div>
                 <div class="col">
                     <p>I am a Ph.D. candidate in Computer Science and Engineering at the&nbsp;<a href="https://www.iitr.ac.in/" target="_blank">Indian Institute of Technology, Roorkee</a>. I am fortunate to be advised by Prof.&nbsp;<a href="https://balarsgroup.github.io/"
-                            target="_blank">Balasubramanian Raman</a>. I received my master's in Computer Engineering from&nbsp;<a href="https://nitkkr.ac.in/" target="_blank">National Institute of Technology, Kurukshetra</a>, where I was advised by Prof.&nbsp;
+                            target="_blank">Balasubramanian Raman</a>. I received my master's in Computer Engineering from&nbsp;<a href="https://nitkkr.ac.in/" target="_blank">National Institute of Technology, Kurukshetra</a>, where I was advised by Prof.
                         <a
-                            href="http://www.gkverma.in/projects" target="_blank">Gyanendra Verma</a>&nbsp;on object detection and emotion recognition.&nbsp;Prior to that, I worked with <a href="https://newgensoft.com/" target="_blank">Newgen</a>, on BPM and ECM related products. Before joining Newgen, I received
-                            my bachelor's in Computer Science and Engineering from <a href="https://hbtu.ac.in/" target="_blank">Harcourt Butler Technical University, Kanpur</a>.</p>
+                            href="http://www.gkverma.in/projects" target="_blank">Gyanendra Verma</a>&nbsp;on object detection and emotion recognition.&nbsp;Prior to that, I&nbsp;worked with <a href="https://newgensoft.com/" target="_blank">Newgen</a>, on BPM and ECM related products. Before joining Newgen,
+                            I received my bachelor's in Computer Science and Engineering from <a href="https://hbtu.ac.in/" target="_blank">Harcourt Butler Technical University, Kanpur</a>.</p>
                 </div>
             </div>
             <div class="row" style="padding-top: 20px;">
