--- a/pub.html
+++ b/pub.html
@@ -4,8 +4,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Himanshu Bachchas</title>
+    <title>Himanshu Buckchash</title>
+    <meta name="theme-color" content="rgb(104,71,147)">
+    <meta name="twitter:card" content="summary">
+    <meta name="description" content="Research interests: Computer Vision, Machine Learning, Artificial Intelligence, Cognitive Architectures">
+    <meta name="twitter:title" content="Himanshu Buckchash">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="assets/img/him_nbg.png">
+    <meta name="twitter:image" content="assets/img/him_nbg.png">
+    <meta property="og:description" content="Research interests: Computer Vision, Machine Learning, Artificial Intelligence, Cognitive Architectures">
+    <link rel="icon" type="image/png" sizes="284x289" href="assets/img/him_nbg.png">
+    <link rel="icon" type="image/png" sizes="284x289" href="assets/img/him_nbg.png">
+    <link rel="icon" type="image/png" sizes="284x289" href="assets/img/him_nbg.png">
+    <link rel="icon" type="image/png" sizes="284x289" href="assets/img/him_nbg.png">
+    <link rel="icon" type="image/png" sizes="284x289" href="assets/img/him_nbg.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
@@ -13,7 +27,7 @@
 <body class="text-justify">
     <div class="container" style="max-width: 900px;">
         <nav class="navbar navbar-light navbar-expand-md sticky-top navigation-clean">
-            <div class="container"><a class="navbar-brand" data-bs-hover-animate="pulse" href="index.html">Himanshu Bachchas</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand" data-bs-hover-animate="pulse" href="index.html">Himanshu Buckchash</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div
                     class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
