--- a/pub.html
+++ b/pub.html
@@ -95,9 +95,9 @@
                 <a
                     href="https://www.researchgate.net/profile/Himanshu_Buckchash" target="_blank"><img class="border rounded-circle border-white" data-bs-hover-animate="jello" style="width: 36px;height: 36px;" src="assets/img/researchgate.svg"></a><a href="https://dblp.uni-trier.de/pers/b/Buckchash:Himanshu.html" target="_blank"><img class="border rounded-circle border-white" data-bs-hover-animate="jello" style="width: 36px;height: 36px;" src="assets/img/dblp.svg"></a>
                     <a
-                        href="https://github.com/hbachchas" target="_blank"><img class="border rounded-circle border-white" data-bs-hover-animate="jello" style="width: 36px;height: 36px;" src="assets/img/github.svg"></a>
-            </div>
-            <p class="copyright">© Himanshu Buckchash</p>
+                        href="https://github.com/hbachchas" target="_blank"><img class="border rounded-circle border-white" data-bs-hover-animate="jello" style="width: 36px;height: 36px;" src="assets/img/github.svg"></a><a href="https://orcid.org/0000-0003-3679-3498" target="_blank"><img class="border rounded-circle border-white" data-bs-hover-animate="jello" style="width: 36px;height: 36px;" src="assets/img/orcid.svg"></a></div>
+            <p
+                class="copyright">© Himanshu Buckchash</p>
         </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
