--- a/data.html
+++ b/data.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Himanshu Buckchash</title>
     <meta name="theme-color" content="rgb(104,71,147)">
+    <meta name="google-site-verification" content="Xu0HcHZRSEMoUMXF0C-HeUZ-4zt_e61Mm217Kj4Eidg">
     <meta name="twitter:card" content="summary">
     <meta name="description" content="Research interests: Computer Vision, Machine Learning, Artificial Intelligence, Cognitive Architectures">
     <meta name="twitter:title" content="Himanshu Buckchash">
@@ -22,6 +23,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+<meta name="google-site-verification" content="Xu0HcHZRSEMoUMXF0C-HeUZ-4zt_e61Mm217Kj4Eidg" />
 </head>
 
 <body class="text-justify">
