--- a/misc.html
+++ b/misc.html
@@ -50,6 +50,9 @@
                         <li><a href="http://bach.ai/" target="_blank">Joscha Bach</a></li>
                         <li><a href="https://people.eecs.berkeley.edu/~jordan/" target="_blank">Michael Irwin Jordan</a></li>
                         <li><a href="https://people.eecs.berkeley.edu/~malik/" target="_blank">Jitendra Malik</a></li>
+                        <li><a href="https://fchollet.com/" target="_blank">François Chollet</a></li>
+                        <li><a href="https://www.cs.toronto.edu/~ilya/" target="_blank">Ilya Sutskever</a></li>
+                        <li><a href="https://yoshuabengio.org/" target="_blank">Yoshua Bengio</a></li>
                     </ul>
                 </div>
             </div>
