--- a/pub.html
+++ b/pub.html
@@ -48,6 +48,7 @@
                     <p class="text-muted"><em>* denotes equal contribution</em></p>
                     <h5>2020</h5>
                     <ul>
+                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. DuTriNet: Dual-Stream Triplet Siamese Network for Self-Supervised Action Recognition by Modeling Temporal Correlations. In&nbsp;<em>32nd&nbsp;IEEE&nbsp;International Conference on Tools with Artificial Intelligence (ICTAI). </em>[Accepted]</li>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. Towards Zero Shot Learning of Geometry of Motion Streams and Its Application to Anomaly Recognition. [<a href="https://doi.org/10.36227/techrxiv.12578306.v1"
                                 target="_blank">preprint</a>]</li>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. Human Motion Generation by Stochastic Conditioning of Deep Recurrent Networks on Pose Manifolds. In&nbsp;<em>27th IEEE International Conference on&nbsp;Image Processing (ICIP). </em>[Accepted]</li>
