--- a/misc.html
+++ b/misc.html
@@ -45,7 +45,7 @@
         <div class="col">
             <div class="row" style="padding-top: 20px;">
                 <div class="col">
-                    <h5>People I revere</h5>
+                    <h5>Inspirational</h5>
                     <ul class="list-unstyled">
                         <li><a href="http://bach.ai/" target="_blank">Joscha Bach</a></li>
                         <li><a href="https://people.eecs.berkeley.edu/~jordan/" target="_blank">Michael Irwin Jordan</a></li>
