--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="col">
                     <h5>Research Interests</h5>
                     <p>My present research revolves around video analysis, with a focus on understanding — motion, action recognition, generative models, and manifold learning. I am trying to develop algorithms that can understand video content in the absence
-                        of labels. The primary focus is on video representations. My broad areas of interest are:</p>
+                        of labels. The primary focus is on video representations. I am also interested in applications of machine learning, especially in the healthcare sector. My broad areas of interest are:</p>
                     <ul>
                         <li>Computer Vision</li>
                         <li>Machine Learning</li>
