--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <p>My present research revolves around video analysis, with a focus on understanding — motion, action recognition, generative models, and manifold learning. I am trying to develop algorithms that can understand video content in the absence
                         of labels. The primary focus is on video representations. I am also interested in applications of machine learning, especially in the healthcare sector. My broad areas of interest are:</p>
                     <ul>
+                        <li>Healthcare Applications</li>
                         <li>Computer Vision</li>
                         <li>Machine Learning</li>
                         <li>Artificial Intelligence</li>
