--- a/pub.html
+++ b/pub.html
@@ -46,19 +46,24 @@
             <div class="row" style="padding-top: 20px;">
                 <div class="col">
                     <p class="text-muted"><em>* denotes equal contribution</em></p>
+                    <h5>2021</h5>
+                    <ul>
+                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2021. GraSP: Local Grassmannian Spatio-Temporal Patterns for Unsupervised Pose Sequence Recognition. In&nbsp;<em>ACM Transactions on Multimedia Computing, Communications, and Applications. </em>[in press]</li>
+                        <li>Arora*, R., Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>,&nbsp;<em>et al.,</em>&nbsp;2021. AI-Based Diagnosis of COVID-19 Patients Using X-Ray Scans With Stochastic Ensemble of CNNs. In&nbsp;<em>Physical and Engineering Sciences in Medicine. </em>[in press]</li>
+                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2021. Towards Zero Shot Learning of Geometry of Motion Streams and Its Application to Anomaly Recognition. In&nbsp;<em>Expert Systems with Applications,</em>&nbsp;177(1),
+                            pp. 114916. [<a href="https://doi.org/10.1016/j.eswa.2021.114916" target="_blank">published</a>]</li>
+                        <li>Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>, &amp; Raman, B., 2021. Discriminative auto-encoding for classification and representation learning problems. In&nbsp;<em>IEEE Signal Processing Letters,</em>&nbsp;28(1),
+                            pp. 987-991. [<a href="https://doi.org/10.1109/LSP.2021.3077853" target="_blank">published</a>]</li>
+                    </ul>
                     <h5>2020</h5>
                     <ul>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. DuTriNet: Dual-Stream Triplet Siamese Network for Self-Supervised Action Recognition by Modeling Temporal Correlations. In&nbsp;<em>32nd&nbsp;IEEE&nbsp;International Conference on Tools with Artificial Intelligence (ICTAI). </em>[Accepted]</li>
-                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. Towards Zero Shot Learning of Geometry of Motion Streams and Its Application to Anomaly Recognition. [<a href="https://doi.org/10.36227/techrxiv.12578306.v1"
-                                target="_blank">preprint</a>]</li>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. Human Motion Generation by Stochastic Conditioning of Deep Recurrent Networks on Pose Manifolds. In&nbsp;<em>27th IEEE International Conference on&nbsp;Image Processing (ICIP). </em>[Accepted]</li>
                         <li>Kundu*, J. N., <span style="text-decoration: underline;">Buckchash*, H.</span>, Mandikal, P., Venkatesh, R. M., Jamkhandi, A., &amp; Babu, R. V., 2020. Cross-conditioned Recurrent Networks for Long-term Synthesis of Inter-person
                             Human Motion Interactions. In&nbsp;<em>The IEEE Winter Conference on Applications of Computer Vision (WACV),&nbsp;</em>&nbsp;pp. 2724-2733. [<a href="https://openaccess.thecvf.com/content_WACV_2020/papers/Kundu_Cross-Conditioned_Recurrent_Networks_for_Long-Term_Synthesis_of_Inter-Person_Human_Motion_WACV_2020_paper.pdf"
                                 target="_blank">published</a>]</li>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. Variational Conditioning of Deep Recurrent Networks for Modeling Complex Motion Dynamics. In&nbsp;<em>IEEE Access,</em>&nbsp;8(1), pp. 67822-67834.
                             [<a href="https://ieeexplore.ieee.org/document/9055015" target="_blank">published</a>]</li>
-                        <li>Arora*, R., Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>,&nbsp;<em>et al.,</em>&nbsp;2020. AI-Based Diagnosis of COVID-19 Patients Using X-Ray Scans With Stochastic Ensemble of CNNs. [<a href="https://doi.org/10.36227/techrxiv.12464402.v1"
-                                target="_blank">preprint</a>]</li>
                         <li>Kumar, R., Arora, R., Bansal, V., Sahayasheela, V. J., <span style="text-decoration: underline;">Buckchash, H.</span>,&nbsp;<em>et al.,</em>&nbsp;2020. Accurate Prediction of COVID-19 Using Chest X-Ray Images Through Deep Feature
                             Learning Model With SMOTE and Machine Learning Classifiers. [<a href="https://doi.org/10.1101/2020.04.13.20063461" target="_blank">preprint</a>]</li>
                     </ul>
