--- a/pub.html
+++ b/pub.html
@@ -48,8 +48,9 @@
                     <p class="text-muted"><em>* denotes equal contribution</em></p>
                     <h5>2021</h5>
                     <ul>
-                        <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2021. GraSP: Local Grassmannian Spatio-Temporal Patterns for Unsupervised Pose Sequence Recognition. In&nbsp;<em>ACM Transactions on Multimedia Computing, Communications, and Applications. </em>[in press]</li>
+                        <li value="[J8]"><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2021. GraSP: Local Grassmannian Spatio-Temporal Patterns for Unsupervised Pose Sequence Recognition. In&nbsp;<em>ACM Transactions on Multimedia Computing, Communications, and Applications. </em>[in press]</li>
                         <li>Arora*, R., Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>,&nbsp;<em>et al.,</em>&nbsp;2021. AI-Based Diagnosis of COVID-19 Patients Using X-Ray Scans With Stochastic Ensemble of CNNs. In&nbsp;<em>Physical and Engineering Sciences in Medicine. </em>[in press]</li>
+                        <li>Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>, &amp; Raman, B., 2021. Computational intelligence enabled student performance estimation in the age of COVID-19. In&nbsp;<em>SN Computer Science. </em>[in press]</li>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2021. Towards Zero Shot Learning of Geometry of Motion Streams and Its Application to Anomaly Recognition. In&nbsp;<em>Expert Systems with Applications,</em>&nbsp;177(1),
                             pp. 114916. [<a href="https://doi.org/10.1016/j.eswa.2021.114916" target="_blank">link</a>]</li>
                         <li>Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>, &amp; Raman, B., 2021. Discriminative Auto-Encoding for Classification and Representation Learning Problems. In&nbsp;<em>IEEE Signal Processing Letters,</em>&nbsp;28(1),
