--- a/pub.html
+++ b/pub.html
@@ -47,7 +47,7 @@
                 <div class="col">
                     <p class="text-muted"><em>* denotes equal contribution</em></p>
                     <h5>2021</h5>
-                    <ul list-style-type: none;>
+                    <ol list-style-type: none;>
                         <li><b>[J8]</b> <span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2021. GraSP: Local Grassmannian Spatio-Temporal Patterns for Unsupervised Pose Sequence Recognition. In&nbsp;<em>ACM Transactions on Multimedia Computing, Communications, and Applications. </em>[in press]</li>
                         <li>Arora*, R., Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>,&nbsp;<em>et al.,</em>&nbsp;2021. AI-Based Diagnosis of COVID-19 Patients Using X-Ray Scans With Stochastic Ensemble of CNNs. In&nbsp;<em>Physical and Engineering Sciences in Medicine. </em>[in press]</li>
                         <li>Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>, &amp; Raman, B., 2021. Computational intelligence enabled student performance estimation in the age of COVID-19. In&nbsp;<em>SN Computer Science. </em>[in press]</li>
@@ -55,9 +55,9 @@
                             pp. 114916. [<a href="https://doi.org/10.1016/j.eswa.2021.114916" target="_blank">link</a>]</li>
                         <li>Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>, &amp; Raman, B., 2021. Discriminative Auto-Encoding for Classification and Representation Learning Problems. In&nbsp;<em>IEEE Signal Processing Letters,</em>&nbsp;28(1),
                             pp. 987-991. [<a href="https://doi.org/10.1109/LSP.2021.3077853" target="_blank">link</a>]</li>
-                    </ul>
+                    </ol>
                     <h5>2020</h5>
-                    <ul>
+                    <ol>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. DuTriNet: Dual-Stream Triplet Siamese Network for Self-Supervised Action Recognition by Modeling Temporal Correlations. In&nbsp;<em>32nd&nbsp;IEEE&nbsp;International Conference on Tools with Artificial Intelligence (ICTAI),&nbsp;</em>&nbsp;pp. 488-495. [<a href="https://doi.org/10.1109/ICTAI50040.2020.00082"
                                 target="_blank">link</a>]</li>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2020. Human Motion Generation by Stochastic Conditioning of Deep Recurrent Networks on Pose Manifolds. In&nbsp;<em>27th IEEE International Conference on&nbsp;Image Processing (ICIP),&nbsp;</em>&nbsp;pp. 2406-2410. [<a href="https://doi.org/10.1109/ICIP40778.2020.9190765"
@@ -69,31 +69,31 @@
                             [<a href="https://ieeexplore.ieee.org/document/9055015" target="_blank">link</a>]</li>
                         <li>Kumar, R., Arora, R., Bansal, V., Sahayasheela, V. J., <span style="text-decoration: underline;">Buckchash, H.</span>,&nbsp;<em>et al.,</em>&nbsp;2020. Accurate Prediction of COVID-19 Using Chest X-Ray Images Through Deep Feature
                             Learning Model With SMOTE and Machine Learning Classifiers. [<a href="https://doi.org/10.1101/2020.04.13.20063461" target="_blank">link</a>]</li>
-                    </ul>
+                    </ol>
                     <h5>2019</h5>
-                    <ul>
+                    <ol>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2019. Sustained Self-Supervised Pretraining for Temporal Order Verification. In&nbsp;<em>8th International Conference on&nbsp;Pattern Recognition &amp; Machine Intelligence (PReMI),</em>&nbsp;pp.
                             140-149. Springer, Cham.&nbsp;[<a href="https://link.springer.com/chapter/10.1007/978-3-030-34869-4_16" target="_blank">link</a>]</li>
                         <li>Tanwar, V. K., <span style="text-decoration: underline;">Buckchash, H.</span>, Raman, B., &amp; Bhargava, R., 2018. Dense Motion Analysis of German Finger Spellings. In&nbsp;<em>Multimedia Tools and Applications,</em>&nbsp;78(8),
                             pp. 9511-9536. [<a href="https://link.springer.com/article/10.1007/s11042-018-6533-0" target="_blank">link</a>]</li>
-                    </ul>
+                    </ol>
                     <h5>2018</h5>
-                    <ul>
+                    <ol>
                         <li>Pundir, A. S., <span style="text-decoration: underline;">Buckchash, H.</span>, Rajput, A. S., Tanwar, V. K., &amp; Raman, B., 2018. Fire Detection Using Dense Trajectories. In&nbsp;<em>Proceedings of&nbsp;2nd International Conference on&nbsp;Computer Vision &amp; Image Processing (CVIP), </em>pp.
                             211-221. Springer, Singapore.&nbsp;[<a href="https://link.springer.com/chapter/10.1007/978-981-10-7898-9_17" target="_blank">link</a>]</li>
-                    </ul>
+                    </ol>
                     <h5>2017</h5>
-                    <ul>
+                    <ol>
                         <li>Kushwaha, P., <span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2017. Anomaly Based Intrusion Detection Using Filter Based Feature Selection on KDD-CUP 99. In&nbsp;<em>2017 IEEE&nbsp;Region 10 Conference (TENCON), </em>pp.
                             839-844. IEEE.&nbsp;[<a href="https://ieeexplore.ieee.org/document/8227975" target="_blank">link</a>]</li>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2017. A Robust Object Detector: Application to Detection of Visual Knives. In&nbsp;<em>2017 IEEE International Conference on&nbsp;Multimedia &amp; Expo Workshops (ICMEw), </em>pp.
                             633-638. IEEE.&nbsp;[<a href="https://ieeexplore.ieee.org/document/8026214" target="_blank">link</a>]</li>
-                    </ul>
+                    </ol>
                     <h5>2015</h5>
-                    <ul>
+                    <ol>
                         <li><span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Verma, G. K., 2015. Texture vs. Multiresolution Analysis of Facial Expressions: Application to Emotion Recognition. In&nbsp;<em>International Journal of Applied Pattern Recognition,</em>&nbsp;2(1),
                             pp. 46-75.&nbsp;[<a href="https://www.inderscienceonline.com/doi/abs/10.1504/IJAPR.2015.068931" target="_blank">link</a>]</li>
-                    </ul>
+                    </ol>
                     <p></p>
                 </div>
             </div>
