--- a/pub.html
+++ b/pub.html
@@ -47,7 +47,7 @@
                 <div class="col">
                     <p class="text-muted"><em>* denotes equal contribution</em></p>
                     <h5>2021</h5>
-                    <ol list-style-type: none;>
+                    <ol style="list-style-type: none;">
                         <li><b>[J8]</b> <span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2021. GraSP: Local Grassmannian Spatio-Temporal Patterns for Unsupervised Pose Sequence Recognition. In&nbsp;<em>ACM Transactions on Multimedia Computing, Communications, and Applications. </em>[in press]</li>
                         <li>Arora*, R., Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>,&nbsp;<em>et al.,</em>&nbsp;2021. AI-Based Diagnosis of COVID-19 Patients Using X-Ray Scans With Stochastic Ensemble of CNNs. In&nbsp;<em>Physical and Engineering Sciences in Medicine. </em>[in press]</li>
                         <li>Bansal*, V., <span style="text-decoration: underline;">Buckchash*, H.</span>, &amp; Raman, B., 2021. Computational intelligence enabled student performance estimation in the age of COVID-19. In&nbsp;<em>SN Computer Science. </em>[in press]</li>
