--- a/index.html
+++ b/index.html
@@ -46,18 +46,13 @@
             <div class="row" style="padding-top: 20px;">
                 <div class="col-xl-3"><img class="rounded-circle img-fluid" src="assets/img/him_nbg.png"></div>
                 <div class="col">
-                    <p>I am a Ph.D. candidate in Computer Science and Engineering at the&nbsp;<a href="https://www.iitr.ac.in/" target="_blank">Indian Institute of Technology, Roorkee</a>. I am fortunate to be advised by Prof.&nbsp;<a href="https://balarsgroup.github.io/"
-                            target="_blank">Balasubramanian Raman</a>. I received my masters in Computer Engineering from&nbsp;<a href="https://nitkkr.ac.in/" target="_blank">National Institute of Technology, Kurukshetra</a>, where I was advised by Prof.
-                        <a
-                            href="http://www.gkverma.in/projects" target="_blank">Gyanendra Verma</a>&nbsp;on object detection and emotion recognition.&nbsp;Prior to that, I&nbsp;worked with <a href="https://newgensoft.com/" target="_blank">Newgen</a>, on BPM and ECM related products. Before joining Newgen,
-                            I received my bachelors in Computer Science and Engineering from <a href="https://hbtu.ac.in/" target="_blank">Harcourt Butler Technical University, Kanpur</a>.</p>
+                    <p>I am a post doctoral fellow at the Department of Computer Science at UiT The Arctic University of Norway. I am working with Prof. Dilip K. Prasad in the OrganVision project.</p>
                 </div>
             </div>
             <div class="row" style="padding-top: 20px;">
                 <div class="col">
                     <h5>Research Interests</h5>
-                    <p>My present research revolves around video analysis, with a focus on understanding — motion, action recognition, generative models, and manifold learning. I am trying to develop algorithms that can understand video content in the absence
-                        of labels. The primary focus is on video representations. I am also interested in applications of machine learning, especially in the healthcare sector. My broad areas of interest are:</p>
+                    <p>My present research revolves around nanoscopy and self-supervised learning. I am interested in applications of machine learning, especially in the healthcare sector. My broad areas of interest are:</p>
                     <ul>
                         <li>Healthcare Applications</li>
                         <li>Computer Vision</li>
