--- a/misc.html
+++ b/misc.html
@@ -24,6 +24,26 @@
     <link rel="stylesheet" href="assets/css/styles.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 <meta name="google-site-verification" content="Xu0HcHZRSEMoUMXF0C-HeUZ-4zt_e61Mm217Kj4Eidg" />
+<style>
+    .gallery img {
+        height: 300px;
+        width: 100%;
+        object-fit: cover;
+        margin-bottom: 15px;
+        transition: transform 0.2s;
+    }
+
+    .gallery img:hover {
+        transform: scale(1.05);
+    }
+
+    .gallery a {
+        display: block;
+        overflow: hidden;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+</style>
 </head>
 
 <body class="text-justify">
@@ -56,6 +76,52 @@
                     </ul>
                 </div>
             </div>
+            
+            <div class="row" style="padding-top: 20px;">
+                <div class="col">
+                    <h5>Hobby</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" target="_blank">Philosophy (दर्शन)</a></li>
+                        <li><a href="#" target="_blank">Geography &amp; Politics</a></li
+                        <li><a href="#" target="_blank">Hiking, Mountains...</a></li>
+                        <li><a href="#" target="_blank">Sprinting, Weight lifting, Football...</a></li>
+                    </ul>
+                </div>
+            </div>
+            
+            <!-- Gallery Section -->
+            <div class="row" style="padding-top: 20px;">
+                <div class="col">
+                    <!-- <h5>Gallery</h5> -->
+                    <h5></h5>
+                    <div class="row gallery">
+                        <div class="col-md-6">
+                            <a href="assets/1.jpg" target="_blank"><img src="assets/1.jpg" class="img-fluid" alt="Gallery Image 1"></a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="assets/2.jpg" target="_blank"><img src="assets/2.jpg" class="img-fluid" alt="Gallery Image 2"></a>
+                        </div>
+                    </div>
+                    <div class="row gallery" style="margin-top: 10px;">
+                        <div class="col-md-6">
+                            <a href="assets/3.jpg" target="_blank"><img src="assets/3.jpg" class="img-fluid" alt="Gallery Image 3"></a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="assets/4.jpg" target="_blank"><img src="assets/4.jpg" class="img-fluid" alt="Gallery Image 4"></a>
+                        </div>
+                    </div>
+                    <div class="row gallery" style="margin-top: 10px;">
+                        <div class="col-md-6">
+                            <a href="assets/5.jpg" target="_blank"><img src="assets/5.jpg" class="img-fluid" alt="Gallery Image 5"></a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="assets/6.jpg" target="_blank"><img src="assets/6.jpg" class="img-fluid" alt="Gallery Image 6"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Gallery Section -->
+
         </div>
     </div>
     </div>
