--- a/misc.html
+++ b/misc.html
@@ -43,6 +43,16 @@
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
+
+    .thought-card {
+        margin-bottom: 20px;
+    }
+
+    .thought-card p {
+        font-size: 1.2em;
+        font-style: italic;
+        color: #6c757d;
+    }
 </style>
 </head>
 
@@ -63,6 +73,30 @@
     </nav>
     <div class="row" style="padding-left: 32px;padding-right: 48px;">
         <div class="col">
+            <!-- Thoughts Section -->
+            <div class="row" style="padding-top: 20px;">
+                <div class="col">
+                    <!-- <h5>Thoughts</h5> -->
+                    <h5></h5>
+                    <div class="card thought-card">
+                        <div class="card-body">
+                            <p class="card-text">A human is like a coin with two sides—action and thought—where each controls the other through mutual exclusion.</p>
+                        </div>
+                    </div>
+                    <div class="card thought-card">
+                        <div class="card-body">
+                            <p class="card-text">There are no absolutes, only spectrums.</p>
+                        </div>
+                    </div>
+                    <div class="card thought-card">
+                        <div class="card-body">
+                            <p class="card-text">Faith is the only singularity.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Thoughts Section -->
+            
             <div class="row" style="padding-top: 20px;">
                 <div class="col">
                     <h5>Links</h5>
