--- a/pub.html
+++ b/pub.html
@@ -45,7 +45,7 @@
         <div class="col">
             <div class="row" style="padding-top: 20px;">
                 <div class="col">
-                    <p class="text-muted"><em>* denotes equal contribution</em></p>
+                    <p class="text-muted"><em>* denotes equal contribution.   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    For latest: </em> <a href="https://scholar.google.co.in/citations?hl=en&user=jSol3hgAAAAJ&view_op=list_works&sortby=pubdate" target="_blank">Google Scholar</a></p>
                     <h5>2021</h5>
                     <ol style="list-style-type: none;">
                         <li><b>[J8]</b> <span style="text-decoration: underline;">Buckchash, H.</span>, &amp; Raman, B., 2021. GraSP: Local Grassmannian Spatio-Temporal Patterns for Unsupervised Pose Sequence Recognition. In&nbsp;<em>ACM Transactions on Multimedia Computing, Communications, and Applications. </em>[in press]</li>
