--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     <h5>Contact</h5>
                     <ul class="list-unstyled">
                         <li>Himanshu Buckchash</li>
-                        <li class="text-secondary">Department of Computer Science and Engineering</li>
-                        <li class="text-secondary"><a class="text-secondary" href="https://balarsgroup.github.io/" target="_blank">Machine Vision Lab (S-211)</a></li>
-                        <li class="text-secondary">Indian Institute of Technology, Roorkee</li>
-                        <li>e-mail: hbuckchash [at] cs [dot] iitr [dot] ac [dot] in</li>
+                        <li class="text-secondary">Department of Computer Science</li>
+                        <li class="text-secondary"><a class="text-secondary" href="#" target="_blank">REALF A-233</a></li>
+                        <li class="text-secondary">UiT The Arctic University of Norway</li>
+                        <li>e-mail: himanshu [dot] buckchash [at] uit [dot] no</li>
                     </ul>
                 </div>
             </div>
