--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="row" style="padding-top: 20px;">
                 <div class="col-xl-3"><img class="rounded-circle img-fluid" src="assets/img/him_nbg.png"></div>
                 <div class="col">
-                    <p>I am a post doctoral fellow at NT-fak at UiT Tromsø, Norway. I am working with Prof. Dilip Prasad in the OrganVision project. Before joining UiT, I completed my PhD at IIT Roorkee, India, under the guidance of Prof. Balasubramanian Raman. During my PhD, I studied the recognition and generation problems in human motion. I completed my Master's under the direction of Prof. Gyanendra Verma at NIT Kurukshetra, India. Before that, I completed my Bachelor's in Computer Science from HBTI Kanpur, India.</p>
+                    <p>Hi, Welcome!<br>I am a #computer-science #ai enthusiast. My main research interest is in applications of AI in healthcare and biomedicine. Currently, I am working as a senior lecturer at the University of Applied Sciences Krems in Austria. Before that, I was a postdoc at the University of Tromsø in Norway, where I worked with Prof. Dilip Prasad on an ERC project. Before joining UiT, I completed my PhD at IIT Roorkee in India, under the guidance of Prof. Balasubramanian Raman. During my PhD, I studied the recognition and generation problems in human motion. I completed my Master's under the direction of Prof. Gyanendra Verma at NIT Kurukshetra. Before that, I completed my Bachelor's in Computer Science from HBTI Kanpur.</p>
                 </div>
             </div>
             <div class="row" style="padding-top: 20px;">
