--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     <h5>Contact</h5>
                     <ul class="list-unstyled">
                         <li>Himanshu Buckchash</li>
-                        <li class="text-secondary">Department of Computer Science</li>
-                        <li class="text-secondary"><a class="text-secondary" href="#" target="_blank">REALF A-233</a></li>
-                        <li class="text-secondary">UiT The Arctic University of Norway</li>
-                        <li>e-mail: himanshu [dot] buckchash [at] uit [dot] no</li>
+                        <li class="text-secondary">Department of Science &amp; Technology</li>
+                        <li class="text-secondary"><a class="text-secondary" href="#" target="_blank">IMC Krems University of Applied Sciences</a></li>
+                        <li class="text-secondary">Piaristengasse 1 . 3500 Krems . Austria . Europe</li>
+                        <li>e-mail: himanshu [dot] buckchash [at] imc [dot] ac [dot] at</li>
                     </ul>
                 </div>
             </div>
