--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
                     <h5>Research Interests</h5>
                     <p>My present research revolves around nanoscopy and self-supervised learning. I am interested in applications of machine learning, especially in the healthcare sector. My broad areas of interest are:</p>
                     <ul>
-                        <li>Healthcare Applications</li>
-                        <li>Computer Vision</li>
-                        <li>Machine Learning</li>
+                        <li>Healthcare Biomedical Applications</li>
                         <li>Artificial Intelligence</li>
                         <li>Cognitive Architectures</li>
                     </ul>
