--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <ul class="list-unstyled">
                         <li>Himanshu Buckchash</li>
                         <li class="text-secondary">Department of Science &amp; Technology</li>
-                        <li class="text-secondary"><a class="text-secondary" href="#" target="_blank">IMC Krems University of Applied Sciences</a></li>
+                        <li class="text-secondary"><a class="text-secondary" href="#" target="_blank">IMC University of Applied Sciences Krems</a></li>
                         <li class="text-secondary">Piaristengasse 1 . 3500 Krems . Austria . Europe</li>
                         <li>e-mail: himanshu [dot] buckchash [at] imc [dot] ac [dot] at</li>
                     </ul>
