--- a/misc.html
+++ b/misc.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="card thought-card">
                         <div class="card-body">
-                            <p class="card-text">Faith is the only singularity.</p>
+                            <p class="card-text">Faith is the singularity.</p>
                         </div>
                     </div>
                 </div>
