--- a/misc.html
+++ b/misc.html
@@ -113,7 +113,7 @@
             
             <div class="row" style="padding-top: 20px;">
                 <div class="col">
-                    <h5>Hobby</h5>
+                    <h5>Interests</h5>
                     <ul class="list-unstyled">
                         <li><a href="#" target="_blank">Philosophy (दर्शन)</a></li>
                         <li><a href="#" target="_blank">Geography &amp; Politics</a></li
